GameGetListByPlayedUserSmallBean 최적화