@@ -15,14 +15,6 @@ import java.util.stream.Collectors;
 public class GameGetListByPlayedUserSmallBean {
     private final GameRepository gameRepository;
     public List<GameDAO> exec(UserDAO user, PageRequest pageRequest) {
-        List<Long> gameIds = gameRepository.findAllByPlayedUserOrderByCreatedAtDescGameIdAsc(user, pageRequest).toList();
-        List<GameDAO> nonSorted = gameRepository.findByGameIdIn(gameIds);
-
-        return nonSorted.stream()
-                .sorted((o1, o2) -> {
-                    int o1Index = gameIds.indexOf(o1.getGameId());
-                    int o2Index = gameIds.indexOf(o2.getGameId());
-                    return Integer.compare(o1Index, o2Index);
-                }).collect(Collectors.toList());
+        return gameRepository.findAllByPlayedUserOrderByCreatedAtDescGameIdAsc(user, pageRequest).toList();
     }
 }
